[gd_scene load_steps=9 format=3 uid="uid://b5nk1tsswudcm"]

[ext_resource type="Script" uid="uid://cj62lf447h2yt" path="res://player/player_targeting_system/player_targeting_system.gd" id="1_b78qp"]
[ext_resource type="Script" uid="uid://tbem4276jhd7" path="res://player/player_targeting_system/gui_reticle.gd" id="2_f0thc"]
[ext_resource type="Script" uid="uid://cut4kfomw0edi" path="res://player/player_targeting_system/eye_list.gd" id="2_y87dp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dfo1h"]
size = Vector3(8, 10, 14)

[sub_resource type="BoxShape3D" id="BoxShape3D_ini2b"]
size = Vector3(8, 10, 14)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ry60"]
size = Vector3(2, 10, 14)

[sub_resource type="Gradient" id="Gradient_p83y2"]
offsets = PackedFloat32Array(0.967742, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dhr5k"]
gradient = SubResource("Gradient_p83y2")
width = 16
height = 16
fill_from = Vector2(0.529915, 0.529915)
fill_to = Vector2(0.508547, 0.508547)

[node name="PlayerTargetingSystem" type="Node3D"]
script = ExtResource("1_b78qp")
target_detection_layer_mask = 13

[node name="LeftEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4
script = ExtResource("2_y87dp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -2)
shape = SubResource("BoxShape3D_dfo1h")

[node name="RightEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4
script = ExtResource("2_y87dp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -2)
shape = SubResource("BoxShape3D_ini2b")

[node name="CenterEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4
script = ExtResource("2_y87dp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_5ry60")

[node name="Eyeline" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -17.515)
collision_mask = 13
debug_shape_custom_color = Color(0.913725, 0.388235, 0.145098, 1)
debug_shape_thickness = 4

[node name="ReticleControl" type="Control" parent="." node_paths=PackedStringArray("targeting_system")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_f0thc")
targeting_system = NodePath("..")

[node name="ReticleImage" type="TextureRect" parent="ReticleControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 24.0
rotation = -2.35619
texture = SubResource("GradientTexture2D_dhr5k")
